<resources>
    <string name="app_name">GardelitoApp</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>

    <string name="hint_username">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">Login</string>
    <string name="hint_plate">Plato</string>
    <string name="hint_price">Precio (S/.)</string>
    <string name="text_button_register">Añadir</string>
    <string name="hint_email">Correo</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>

    <string name="tab_register">Registrar</string>
    <string name="tab_menu">Menu</string>
    <string name="tab_order">Pedidos</string>
    <string name="tab_report">Reporte</string>

    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
